--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -10,3 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: dev
+    steps:    
+      - name: Copy env
+        run: cp .env .env
