--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -9,8 +9,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: docker Build and push
-        uses: docker/build-push-action@v2
+      - name: docker Build
+        uses: docker/setup-buildx-action@v2
         timeout-minutes: 10
         with:
           context: .
